# curso-ros

./: CMakeLists.txt  package.xml  setup.py
scripts/: simple_node
src/simple_module/: node.py
